<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainTitle"
            android:layout_marginBottom="5dip"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/buttonContinueGame"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/continueGame"
            android:layout_marginBottom="5dip"
            android:textSize="50dp"
            android:onClick="continueGame"/>

        <Button
            android:id="@+id/buttonNewGame"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_game"
            android:layout_marginBottom="5dip"
            android:textSize="50dp"
            android:onClick="newGame"/>

        <Button
            android:id="@+id/buttonGameRules"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/rules"
            android:layout_marginBottom="5dip"
            android:textSize="50dp"
            android:onClick="ruleGame"/>

        <Button
            android:id="@+id/buttonExitGame"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/exitGame"
            android:textSize="50dp"
            android:onClick="exitGame"/>
    </LinearLayout>

</LinearLayout>